# student-attendance

./: .gitignore  ANDROID_BUILD_GUIDE.md  ANDROID_TESTING.md  DASHBOARD_MIGRATION.md  DEVELOPER_SETUP.md  README.md  TESTING_GUIDE.md  quick-start.sh
android/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/gradle/: libs.versions.toml
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: main.py
backend/app/api/: attendance.py  auth.py  courses.py  reports.py  schemas.py  students.py
backend/app/core/: config.py  deps.py  security.py
backend/app/models/: attendance.py  course.py  face_embedding.py  student.py  user.py
backend/tests/: conftest.py  test_attendance.py  test_auth.py  test_courses.py  test_students.py
backend/tests/integration/: conftest.py  test_backend_http.py  test_dashboard_http.py
dashboard/: Dockerfile  README.md  index.html  nginx.conf  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json
dashboard-streamlit/: .gitignore  Dockerfile  README.md  app.py
dashboard-streamlit/.streamlit/: config.toml
dashboard/src/: App.tsx
dashboard/src/api/: attendance.ts  auth.ts  client.ts  courses.ts  reports.ts  students.ts
dashboard/src/components/: AttendanceChart.tsx  AttendanceTable.tsx  CourseForm.tsx  StudentForm.tsx
dashboard/src/hooks/: useAuth.tsx  useStudents.ts
dashboard/src/lib/: utils.ts
infra/: docker-compose.yml
(+46 files in other folders)
